# math-computing-labs

./: pyproject.toml
lab3/: lab3.py  lab3_report.docx  lab3_theory.md
lab4/: lab4_report.docx  lab4_theory.md  main.py
lab5/: lab5.py  lab5_report.docx  lab5_theory.md
lab6/: lab6.py  lab6_report.docx  lab6_theory.md
lab7/: lab7.py  lab7_report.docx  lab7_theory.md
lab8/: lab8.py  lab8_report.docx  lab8_theory.md
modeling/lab1/: lab1_variant19.py
rgz_platon/: rgz.py  rgz_v11_report.docx  theory.md
rgz_vlad/: rgz.py  rgz_report.docx  rgz_theory.md
