[project]
name = "math"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "sympy>=1.14.0",
]
